<resources>
    <string name="app_name">ShoppingList</string>
    <string name="Title">Lista Zakupów</string>
    <string name="title_info">Zaloguj się lub stwórz nowe konto</string>
    <string name="enter_mail">wprowadź e-mail</string>
    <string name="enter_password">wprowadź hasło</string>
    <string name="create_new_acc">Stwórz nowe konto</string>
    <string name="recall_password">Zapomniałeś hasła? Wygeneruj nowe.</string>
    <string name="registration_info">Stwórz nowe konto wypełniając formularz.</string>
    <string name="confirm_password">potwierdź hasło</string>
    <string name="create_account">STWÓRZ KONTO</string>
    <string name="enter_nickname">wprowadź pseudonim</string>
    <string name="enter_product_name">nazwa produktu</string>
    <string name="quantity">ilość</string>
    <string name="save_list_on_acc">Zapisz listę na swoim koncie</string>
    <string name="load_list">Wczytaj listę</string>
    <string name="friends_management">ZNAJOMI</string>
    <string name="list_management">ZARZĄDZANIE LISTAMI</string>
    <string name="add_friend">Dodaj znajomego.</string>
    <string name="settings">USTAWIENIA</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
